--- a/pyonline/templates/about.html
+++ b/pyonline/templates/about.html
@@ -49,7 +49,7 @@
     <div class="container flex flex-col space-y-14 items-center">
 
 
-        <h1 class="text-3xl font-bold">About Me</h1>
+        <h1 class="text-3xl font-bold">About</h1>
 
 
 
