--- a/pyonline/templates/welcome.html
+++ b/pyonline/templates/welcome.html
@@ -110,7 +110,7 @@
 
 
         <div class="collapse collapse-arrow bg-base-200">
-            <input type="checkbox" name="my-accordion-2" checked="checked" />
+            <input type="checkbox" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">
               How to use the editor ? 
             </div>
