--- a/pyonline/templates/layout.html
+++ b/pyonline/templates/layout.html
@@ -118,7 +118,8 @@
   });
 
   editor.setSize(750, 690)
-  
+  editor.focus()
+  editor.setCursor({ 'line': 0, 'ch': 0 })
 
   function runCode() {
     var code = editor.getValue();
