fixed the line number  issue

--- a/pyonline/templates/editor.html
+++ b/pyonline/templates/editor.html
@@ -73,9 +73,7 @@
             <!-- editor lower div-->
             <div class="flex justify-center w-full h-[60rem] bg-[#2a323c]">
 
-                <textarea id="code" placeholder="code here"  >
-                    
-                </textarea>
+                <textarea id="code"></textarea>
 
             </div>
 
@@ -125,9 +123,7 @@
                 </div>
                 <!-- output lower div-->
 
-                <div class="mockup-code justify-center max-2xl:max-w-[420px]  max-xl:max-w-full h-full p-4 overflow-auto">
-                    <pre id="output"></pre>
-                </div>
+                <div class="mockup-code justify-center max-2xl:max-w-[420px]  max-xl:max-w-full h-full p-4 overflow-auto"><pre id="output"></pre></div>
 
             </div>
 
